--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -7,14 +7,16 @@
   text-shadow: 2px 5px rgb(121, 201, 101);
   text-align: center;
 }
+.image-container {
+  height: 300px;
+}
 
 #fraseFoto {
-  font-family: cursive;
-  font-style: oblique;
-  margin-left: 280px;
-  position: absolute;
-  top: 190px;
+ margin-left: 320px;
+ margin-top: -200px
 }
+
+
 #foto {
   border-radius: 20%;
   padding: 10px;
@@ -28,7 +30,7 @@
   font-style: oblique;
   
 }
-#ordenada {
+#habilidades {
   text-decoration: underline;
 }
 ul li:nth-of-type(odd) {
@@ -43,6 +45,10 @@ a {
   padding: 1%;
   background-color: rgb(190, 161, 156);
   border-radius: 8px;
+  border: 3px solid black;
+}
+
+#foto {
   margin-left: 20px;
 }
 
@@ -57,4 +63,8 @@ a {
 }
 #cozinhar {
   font-size: 24px;
+}
+
+section {
+  margin-left:20px ;
 }
